--- a/700.쉐도잉프로젝트/03.DC_PJ/02.구현소스/dc-app/package.json
+++ b/700.쉐도잉프로젝트/03.DC_PJ/02.구현소스/dc-app/package.json
@@ -16,7 +16,9 @@
     "jquery-ui-dist": "^1.13.3",
     "jquery-ui-touch-punch": "^0.2.3",
     "react": "^18.3.1",
+    "react-daum-postcode": "^3.1.3",
     "react-dom": "^18.3.1",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
     "sass": "^1.77.4",
