--- a/700.쉐도잉프로젝트/03.DC_PJ/02.구현소스/dc-app/package.json
+++ b/700.쉐도잉프로젝트/03.DC_PJ/02.구현소스/dc-app/package.json
@@ -17,6 +17,7 @@
     "jquery-ui-dist": "^1.13.3",
     "jquery-ui-touch-punch": "^0.2.3",
     "react": "^18.3.1",
+    "react-cookie": "^7.1.4",
     "react-daum-postcode": "^3.1.3",
     "react-dom": "^18.3.1",
     "react-modal": "^3.16.1",
