--- a/007.VueJS학습/05.SPA구성연습/city-vue-app/package.json
+++ b/007.VueJS학습/05.SPA구성연습/city-vue-app/package.json
@@ -14,6 +14,7 @@
     "jquery": "^3.7.1",
     "jquery-ui": "^1.14.0",
     "vue": "^2.5.2",
+    "vue-router": "^3.6.5",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
